// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders children correctly: enabled button 1`] = `[Function]`;

exports[`Button should use \`disabled = false\` property correctly: enabled button 1`] = `
<button
  className="Button__button Button__button-transparent"
  disabled={false}
  onClick={[MockFunction]}
  style={Object {}}
/>
`;

exports[`Button should use \`disabled = true\` property correctly: disabled button 1`] = `
<button
  className="Button__button Button__button-transparent"
  disabled={true}
  onClick={[MockFunction]}
  style={Object {}}
/>
`;

exports[`Button should user correct className for each type: explicit default type 1`] = `
<button
  className="Button__button Button__button-transparent"
  disabled={false}
  onClick={[MockFunction]}
  style={Object {}}
/>
`;

exports[`Button should user correct className for each type: implicit default type 1`] = `
<button
  className="Button__button"
  disabled={false}
  onClick={[MockFunction]}
  style={Object {}}
/>
`;

exports[`Button should user correct className for each type: primary type 1`] = `
<button
  className="Button__button"
  disabled={false}
  onClick={[MockFunction]}
  style={Object {}}
/>
`;
